# push2talk

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  build.bat  push2talk.spec  pyproject.toml  run.py
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  development.md
push2talk/: __init__.py  app.py  autostart.py  config.py  history.py  inserter.py  logging_setup.py  main.py  openai_recognizer.py  recognizer.py  recorder.py  recording_overlay.py  sounds.py  stt_common.py  tray.py  yandex_iam_auth.py
tests/: conftest.py  test_autostart.py  test_config.py  test_history.py  test_inserter.py  test_openai_recognizer.py  test_recognizer.py  test_recorder.py  test_sounds.py  test_yandex_iam_auth.py
